Fix logic, added new function.