@@ -1,18 +1,14 @@
 package dev.piotrulla.crafthype.titles.legacy;
 
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.TextDecoration;
 import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import panda.std.stream.PandaStream;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-public final class Legacy {
-
-    public static final LegacyComponentSerializer SECTION_SERIALIZER = LegacyComponentSerializer.builder()
-            .character('§')
-            .hexColors()
-            .useUnusualXRepeatedCharacterHexFormat()
-            .build();
+public class Legacy {
 
     private static final LegacyComponentSerializer AMPERSAND_SERIALIZER = LegacyComponentSerializer.builder()
             .character('&')
@@ -20,15 +16,18 @@ public final class Legacy {
             .useUnusualXRepeatedCharacterHexFormat()
             .build();
 
-    private Legacy() {
-        throw new UnsupportedOperationException("This is a utility class and cannot be instantiated");
-    }
+    public final static Component RESET_ITALIC = Component.text()
+            .decoration(TextDecoration.ITALIC, false)
+            .build();
 
     public static Component component(String text) {
         return AMPERSAND_SERIALIZER.deserialize(text);
     }
 
-    public static List<Component> component(Iterable<String> texts) {
-        return PandaStream.of(texts).map(Legacy::component).toList();
+    public static List<Component> component(List<String> texts) {
+        return texts.stream()
+                .map(Legacy::component)
+                .collect(Collectors.toList());
     }
+
 }
